2006-06-20  Zdenek Dvorak <dvorakz@suse.cz>

	PR tree-optimization/27331
	* tree-data-ref.c (free_data_ref): New function.
	(create_data_ref): Fail if the data reference has unknown access
	function.
	(free_data_refs): Use free_data_ref.

2006-06-19  Andrew Pinski  <pinskia@gmail.com>

	PR middle-end/28075
	* tree-inline.c (setup_one_parameter): Strip useless
	type conversion before adding it to the IR.
	(declare_return_variable): Likewise.

2006-06-19  Martin Michlmayr  <tbm@cyrius.com>

	PR c/27149
	* c-common.c (c_common_truthvalue_conversion): Fix grammar in warning.

2006-06-19  Mike Stump  <mrs@apple.com>

	* tree.c (variably_modified_type_p): VM arguments don't make the
	type a VM type.

2006-06-19  Richard Guenther  <rguenther@suse.de>

	* tree-ssa-pre.c (try_combine_conversion): Strip useless
	type conversions after folding.

2006-06-19  Richard Guenther  <rguenther@suse.de>

	* ggc-page.c (extra_order_size_tab): Add entries with
	size of struct function and basic_block.
	(size_lookup): Extend to cover sizes up to 511.
	(ggc_alloc_stat): Adjust user.
	(ggc_pch_count_object): Likewise.
	(ggc_pch_alloc_object): Likewise.
	(ggc_pch_write_object): Likewise.

2006-06-19  Zdenek Dvorak <dvorakz@suse.cz>

	* tree-ssa-loop-niter.c (implies_ge_p): New function.
	(derive_constant_upper_bound): Handle OP0 - CST in unsigned types
	correctly.

2006-06-19  Denis Chertykov  <denisc@overta.ru>

	* config/avr/libgcc.S : Correct my wrong previous commit.

2006-06-19  Roger Sayle  <roger@eyesopen.com>

	PR target/27861
	* expmed.c (expand_shift): On SHIFT_COUNT_TRUNCATED targets, we may
	have stripped a SUBREG from the shift count, so we may need to
	convert_to_mode back to the type's mode before calling make_tree.
	Use new_amount instead of amount to avoid expanding a tree twice.

2006-06-19  Richard Guenther  <rguenther@suse.de>

	PR middle-end/28045
	* fold-const.c (operand_equal_p): Check if the argument types
	have the same precision before stripping NOPs.
